correcao de erros

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prismicio/slice-simulator-react": "^0.2.2",
     "@slicemachine/init": "^1.1.15",
     "@types/node": "^18.11.9",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "18.0.8",
     "next": "13.0.2",
